[gd_scene load_steps=41 format=3 uid="uid://ds85cxxblat1n"]

[ext_resource type="Script" uid="uid://bvvxra1wdwirw" path="res://Scripts/Enemies/basic_skeleton_archer.gd" id="1_kvtgg"]
[ext_resource type="Texture2D" uid="uid://diiun1snohy83" path="res://Assets/Sprites/Enemies/Characters(100x100)/Skeleton Archer/Skeleton Archer/Skeleton Archer.png" id="1_xq2fd"]
[ext_resource type="FontFile" uid="uid://bmijv3qthw6as" path="res://Assets/Fonts/Perfect DOS VGA 437 Win.ttf" id="2_kvtgg"]
[ext_resource type="Texture2D" uid="uid://7h65yprg7ef2" path="res://Assets/Sprites/Enemies/Characters(100x100)/Skeleton Archer/Skeleton Archer/Skeleton Archer-Hurt.png" id="3_cpbnd"]
[ext_resource type="AudioStream" uid="uid://bi67dppil4d5n" path="res://Assets/Sfx/Enemies/Skeleton/Bow Attack 2.wav" id="5_vsl7u"]
[ext_resource type="AudioStream" uid="uid://bvee8m43jklnu" path="res://Assets/Sfx/Enemies/Skeleton/skeleton-death-1.wav" id="6_km8pw"]
[ext_resource type="AudioStream" uid="uid://bqgcw25s685go" path="res://Assets/Sfx/Enemies/Generic/thud-1.wav" id="7_km8pw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u2xdt"]
atlas = ExtResource("1_xq2fd")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdi23"]
atlas = ExtResource("1_xq2fd")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh48k"]
atlas = ExtResource("1_xq2fd")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uqex"]
atlas = ExtResource("1_xq2fd")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7ssc"]
atlas = ExtResource("1_xq2fd")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o4ac"]
atlas = ExtResource("1_xq2fd")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8sph"]
atlas = ExtResource("1_xq2fd")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ker70"]
atlas = ExtResource("1_xq2fd")
region = Rect2(700, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xbxx"]
atlas = ExtResource("1_xq2fd")
region = Rect2(800, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdih2"]
atlas = ExtResource("3_cpbnd")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsl7u"]
atlas = ExtResource("3_cpbnd")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_km8pw"]
atlas = ExtResource("3_cpbnd")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q3ke"]
atlas = ExtResource("3_cpbnd")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwtgp"]
atlas = ExtResource("1_xq2fd")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmjs3"]
atlas = ExtResource("1_xq2fd")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvxbm"]
atlas = ExtResource("1_xq2fd")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcmy1"]
atlas = ExtResource("1_xq2fd")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee6cp"]
atlas = ExtResource("1_xq2fd")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r447b"]
atlas = ExtResource("1_xq2fd")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7vcc"]
atlas = ExtResource("1_xq2fd")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr5mt"]
atlas = ExtResource("1_xq2fd")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g36q6"]
atlas = ExtResource("1_xq2fd")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuki6"]
atlas = ExtResource("1_xq2fd")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmvv6"]
atlas = ExtResource("1_xq2fd")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxbqr"]
atlas = ExtResource("1_xq2fd")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0daq"]
atlas = ExtResource("1_xq2fd")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sptfr"]
atlas = ExtResource("1_xq2fd")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsy1f"]
atlas = ExtResource("1_xq2fd")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjk0r"]
atlas = ExtResource("1_xq2fd")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yb75"]
atlas = ExtResource("1_xq2fd")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgbga"]
atlas = ExtResource("1_xq2fd")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ddwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2xdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdi23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh48k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uqex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7ssc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o4ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8sph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ker70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xbxx")
}],
"loop": false,
"name": &"skeleton_archer_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdih2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsl7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km8pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q3ke")
}],
"loop": false,
"name": &"skeleton_archer_damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwtgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmjs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvxbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcmy1")
}],
"loop": false,
"name": &"skeleton_archer_death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee6cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r447b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7vcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr5mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g36q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuki6")
}],
"loop": true,
"name": &"skeleton_archer_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmvv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxbqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0daq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sptfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsy1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjk0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yb75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgbga")
}],
"loop": true,
"name": &"skeleton_archer_run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ey31"]
radius = 7.0

[node name="SkeletonArcher" type="Node2D"]
script = ExtResource("1_kvtgg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_8ddwi")
animation = &"skeleton_archer_attack"

[node name="Word" type="RichTextLabel" parent="."]
z_index = 3
offset_left = -127.0
offset_right = 128.0
offset_bottom = 45.0
theme_override_fonts/normal_font = ExtResource("2_kvtgg")
text = " Type This "
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_2ey31")

[node name="sfx_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vsl7u")
bus = &"SFx"

[node name="sfx_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_km8pw")
bus = &"SFx"

[node name="sfx_damaged" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_km8pw")
bus = &"SFx"
